# Archive

./: .chezmoiroot  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  GEMINI.md  PLANS.md  README.md  code_review.md  package.json  tsconfig.base.json
AgentLens/: .gitignore  pyproject.toml
AgentLens/docs/: cli.md  contract.md  dashboard.md  integrations.md  runbook.md  security.md
AgentLens/docs/adr/: 2026-05-19-agentlens-ecosystem-benchmark.md
AgentLens/docs/plan/: 2026-05-19-agentlens-dashboard.md  2026-05-19-agentlens-importer-hardening-and-usage.md  2026-05-19-agentlens-install-safety-and-importer-hardening.md  2026-05-19-agentlens-v1-and-kws-unification.md  2026-05-21-bun-control-plane-rust-kernel-platform-phase-1-spine.md  2026-05-21-contract-first-unified-agent-platform.md  2026-05-21-full-rust-agent-platform-phase-1-skeleton-contracts.md  2026-05-21-waygent-full-platform-implementation-program.md  README.md  agentlens_v0_tasks.md
AgentLens/docs/spec/: 2026-05-19-agentlens-dashboard-design.md  2026-05-19-agentlens-importer-hardening-and-usage.md  2026-05-19-agentlens-install-safety-and-importer-hardening.md  2026-05-19-agentlens-skill-auto-record-design.md  2026-05-20-agentlens-kws-common-observability-contract-design.md  2026-05-21-bun-control-plane-rust-kernel-agent-platform-design.md  2026-05-21-contract-first-unified-agent-platform-design.md  2026-05-21-full-rust-agent-platform-rewrite-design.md  agentlens_v0_implementation_spec.md
AgentLens/src/agentlens/: __init__.py  cli.py  constants.py  time.py
AgentLens/tests/: helpers.py
AgentLens/tests/fixtures/: codex-oversized-line.jsonl
AgentLens/tests/integration/: test_cli_lifecycle.py  test_cmux_chain.py  test_doctor_wrapper_warning.py  test_eval_determinism.py  test_event_append.py  test_failure_isolation.py  test_import_byte_cap.py  test_import_claude_session.py  test_import_claude_session_report.py  test_import_codex_session_report.py  test_install_cmux_detection.py  test_install_doctor.py  test_nonblocking.py  test_parent_run_linkage.py  test_phase1_smoke.py  test_process_wrapper.py  test_query_fallback.py  test_query_projection_usage_title.py  test_run_open_close.py  test_web_e2e_errors.py  test_web_e2e_healthz.py  test_web_e2e_run_detail.py  test_web_e2e_run_edge_cases.py  test_web_e2e_runs_list.py  test_web_e2e_static.py
AgentLens/tests/unit/: test_agentrunway_events.py  test_claude_session_parser.py  test_codex_session_parser.py  test_dashboard_release_ci.py  test_demo_data.py  test_evaluator_checks.py  test_evaluator_fixtures.py  test_event_query.py  test_ids.py  test_importers_report.py  test_importers_title.py  test_importers_usage.py  test_install_path_conflict_warning.py  test_install_self_reference.py  test_install_wrapper_detect.py  test_query_fallback.py  test_writer.py  (+7 more)
AgentLens/web/: .gitignore  package.json  playwright.config.ts  vite.config.ts
native/kernel/: Cargo.toml
(+1173 files in other folders)
