[workspace]
resolver = "2"
members = [
  "crates/artifact-seal",
  "crates/diff-apply",
  "crates/event-journal",
  "crates/git-worktree",
  "crates/kernel-cli",
  "crates/kernel-protocol",
  "crates/process-supervisor",
  "crates/sandbox-policy"
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
hex = "0.4"
kernel-protocol = { path = "crates/kernel-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wait-timeout = "0.2"
